--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,21 +1,21 @@
 repos:
     -   repo: https://github.com/pre-commit/pre-commit-hooks
-        rev: v3.1.0
+        rev: v3.2.0
         hooks:
         -   id: trailing-whitespace
         -   id: end-of-file-fixer
         -   id: check-yaml
         -   id: check-added-large-files
     -   repo: https://github.com/pre-commit/mirrors-isort
-        rev: v5.1.4
+        rev: v5.5.3
         hooks:
         -   id: isort
     -   repo: https://github.com/ambv/black
-        rev: stable
+        rev: 20.8b1
         hooks:
         - id: black
     -   repo: https://gitlab.com/pycqa/flake8
-        rev: 3.7.9
+        rev: 3.8.3
         hooks:
         - id: flake8
     -   repo: https://github.com/pre-commit/mirrors-mypy
